[package]
name = "frontend"
version = "0.1.0"
authors = ["RS <rs@neb.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2"
gloo-console = "0.1"
js-sys = "0.3"
ybc = "0.2"
yew-feather="0.1.2"
chrono = "0.4.19"
lipsum = "0.8.0"
getrandom = {version = "0.2.3", features = ["js"]}
rand = "0.8.4"
web-sys = {version = "0.3.55"}